tests/ui/premature_schedule_namespace.stderr
error[E0432]: unresolved import `moirai::schedule::System`
 --> tests/ui/premature_schedule_namespace.rs:1:5
  |
1 | use moirai::schedule::System;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^ no `System` in `schedule`
  |
help: a similar name exists in the module (notice the capitalization)
  |
1 - use moirai::schedule::System;
1 + use moirai::schedule::system;
  |
help: consider importing this struct instead
  |
1 - use moirai::schedule::System;
1 + use std::alloc::System;
  |

error[E0603]: module `schedule` is private
 --> tests/ui/premature_schedule_namespace.rs:1:13
  |
1 | use moirai::schedule::System;
  |             ^^^^^^^^ private module
  |
note: the module `schedule` is defined here
 --> src/lib.rs
  |
  | mod schedule;
  | ^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/premature_schedule_namespace.rs:1:30
  |
1 | use moirai::schedule::System;
  |                              ^ consider adding a `main` function to `$DIR/tests/ui/premature_schedule_namespace.rs`
